2010-03-24  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/MLPSolver.hpp: Adding option --n to restrict the number of answer sets returned.
	* include/dlvhex/ProgramCtx.h: Likewise.
	* src/dlvhex/dlvhex.cpp: Likewise.
	* src/dlvhex/State.cpp: Likewise.
	* src/dlvhex/ProgramCtx.cpp: Likewise.
	* testsuite/TestMLPSolver.cpp: Likewise.

2010-03-22  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/MLPSolver.hpp: Adding function to easily print idb.
	* testsuite/TestMLPSolver.cpp: Likewise.

2010-03-19  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* testsuite/TestMLPSolver.cpp: Add test cases for i-stratified program and print, also print the log and graphviz output.
	* examples/module-i-Stratified-2.mlp: Likewise.
	* examples/module-i-Stratified.mlp: Likewise.

	* examples/module-Not-ic-Stratified.hex: Modified to not-i-stratified.

	* include/dlvhex/MLPSolver.hpp: Modified the solver to solve an i-stratified program.

	* src/dlvhex/HexGrammarPTToASTConverter.cpp: Impose an exception for a duplicate module name.

	* testsuite/TestMLPSolver.cpp: Adding a test case for C contains more than one element when enter comp().
	* examples/module-Cs.hex: Likewise.

	* include/dlvhex/MLPSolver.hpp: Updating the answer set counter printing.

2010-03-18  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* testsuite/TestMLPSolver.cpp: Adding a test case to add (and retrieve) fin from A.
	* examples/module-AFin.hex: Likewise.

	* include/dlvhex/MLPSolver.hpp: Fixing bug in setting fin to A and print useful information into a log file.

2010-03-17  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/MLPSolver.hpp: Fixing bug in smallest ILL.
	* include/dlvhex/Logger.hpp: Likewise.

	* testsuite/TestMLPSolver.cpp: Adding a test case for indirect rule to collect the bottom.
	* examples/module-Indirection.hex: Likewise.

	* include/dlvhex/MLPSolver.hpp: Fixing bug in collecting bottom.
