@@ -1,3 +1,7 @@
+2010-03-25  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>
+
+	* include/dlvhex/MLPSolver.hpp: Print log information and call graph in verbose level 2.
+
 2010-03-24  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>
 
 	* include/dlvhex/MLPSolver.hpp: Adding option --n to restrict the number of answer sets returned.
